--- a/Multivariate_Gaussian_with_full_covariance.ipynb
+++ b/Multivariate_Gaussian_with_full_covariance.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MobH_ehMShhP"
+        "id": "ibA8kMMcOO3s"
       },
       "source": [
         "# Multivariate Gaussian with full covariance"
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aI2DcTahShhS"
+        "id": "97CSrgc8OO3u"
       },
       "source": [
         "In this reading you will learn how you can use TensorFlow to specify any multivariate Gaussian distribution."
@@ -30,11 +30,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "qjmryiMLShhT"
+        "id": "GoW-KMghOO3v",
+        "outputId": "15a08157-c7c0-4e7d-bdf7-c16f14025143",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TF version: 2.9.2\n",
+            "TFP version: 0.17.0\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "import tensorflow_probability as tfp\n",
@@ -47,7 +60,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "H6pKIOXKShhU"
+        "id": "Gd7XN8_pOO3v"
       },
       "source": [
         "So far, you've seen how to define multivariate Gaussian distributions using `tfd.MultivariateNormalDiag`. This class allows you to specify a multivariate Gaussian with a diagonal covariance matrix $\\Sigma$. \n",
@@ -62,7 +75,7 @@
         "tags": [
           "hide_input"
         ],
-        "id": "Ypws_IaKShhU"
+        "id": "V-8scJ4vOO3w"
       },
       "outputs": [],
       "source": [
@@ -84,7 +97,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eLyewYWeShhV"
+        "id": "HP3oNYiXOO3w"
       },
       "source": [
         "As you know, a diagonal covariance matrix results in the components of the random vector being independent. "
@@ -93,7 +106,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Wgo5uYeLShhV"
+        "id": "UVtsyFPXOO3w"
       },
       "source": [
         "## Full covariance with `MultivariateNormalFullTriL`"
@@ -102,7 +115,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GaktrreXShhV"
+        "id": "9TZEovfQOO3w"
       },
       "source": [
         "You can define a full covariance Gaussian distribution in TensorFlow using the Distribution `tfd.MultivariateNormalTriL`.\n",
@@ -133,7 +146,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "PfofT9YwShhW"
+        "id": "vJtiRGFwOO3w"
       },
       "outputs": [],
       "source": [
@@ -151,7 +164,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nw4f8TzwShhW"
+        "id": "qIQt39wIOO3x"
       },
       "outputs": [],
       "source": [
@@ -165,7 +178,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8u5cDqEQShhX"
+        "id": "Qt9iQSdbOO3x"
       },
       "outputs": [],
       "source": [
@@ -178,7 +191,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "E6eD-FDvShhX"
+        "id": "wO9BoiSHOO3x"
       },
       "outputs": [],
       "source": [
@@ -194,7 +207,7 @@
         "tags": [
           "\"hide_input\""
         ],
-        "id": "co0gTGVjShhX"
+        "id": "iBqAM-EAOO3y"
       },
       "outputs": [],
       "source": [
@@ -209,7 +222,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7q9Gk8sOShhY"
+        "id": "1FlCDS5qOO3y"
       },
       "source": [
         "As you can see, the approximate density contours are now elliptical rather than circular. This is because the components of the Gaussian are correlated.\n",
@@ -220,7 +233,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cEofwqHCShhY"
+        "id": "eYxlsT5uOO3y"
       },
       "source": [
         "## The Cholesky decomposition"
@@ -229,7 +242,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AEmB3lZVShhY"
+        "id": "y9bWhQ4QOO3y"
       },
       "source": [
         "In the above example, we defined the lower triangular matrix $L$ and used that to build the multivariate Gaussian distribution. The covariance matrix is easily computed from $L$ as $\\Sigma = LL^T$.\n",
@@ -256,7 +269,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xUUQkEdkShhY"
+        "id": "ZaMGnQohOO3z"
       },
       "source": [
         "### `tf.linalg.cholesky`"
@@ -265,7 +278,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pUj36G_tShhY"
+        "id": "-RQYxm2WOO3z"
       },
       "source": [
         "In case you have a valid covariance matrix $\\Sigma$ and would like to compute the lower triangular matrix $L$ above to instantiate a `MultivariateNormalTriL` object, this can be done with the `tf.linalg.cholesky` function. "
@@ -275,7 +288,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OgfSepUTShhZ"
+        "id": "yjNqSqD2OO3z"
       },
       "outputs": [],
       "source": [
@@ -288,7 +301,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fOeP6TREShhZ"
+        "id": "nVD1RwIjOO3z"
       },
       "outputs": [],
       "source": [
@@ -302,7 +315,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5qEGwKG-ShhZ"
+        "id": "SdHD355MOO3z"
       },
       "outputs": [],
       "source": [
@@ -314,7 +327,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NidjFU1NShhZ"
+        "id": "OgZKEUIVOO3z"
       },
       "source": [
         "If the argument to the `tf.linalg.cholesky` is not positive definite, then it will fail:"
@@ -324,7 +337,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "aVpGfUfBShhZ"
+        "id": "hzgSegkdOO30"
       },
       "outputs": [],
       "source": [
@@ -341,7 +354,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xBNd7s9ZShha"
+        "id": "V1VekFV9OO30"
       },
       "source": [
         "### What about positive semi-definite matrices?\n",
@@ -355,7 +368,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4sgnEGtJShha"
+        "id": "J40vCxEvOO30"
       },
       "outputs": [],
       "source": [
@@ -369,7 +382,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "eGfgGy6GShha"
+        "id": "FWYeKvCEOO30"
       },
       "outputs": [],
       "source": [
@@ -387,7 +400,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I7yfOC-vShha"
+        "id": "ruzfoUPiOO30"
       },
       "source": [
         "If the input to the function `tf.linalg.cholesky` is positive semi-definite but not positive definite, it will also fail:"
@@ -397,7 +410,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gaMNjrUXShha"
+        "id": "6dIhnsglOO30"
       },
       "outputs": [],
       "source": [
@@ -414,7 +427,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VaCfw_GsShhb"
+        "id": "IJjtrI7lOO30"
       },
       "source": [
         "In summary: if the covariance matrix $\\Sigma$ for your multivariate Gaussian distribution is positive-definite, then an algorithm that computes the Cholesky decomposition of $\\Sigma$ returns a lower-triangular matrix $L$ such that $LL^T = \\Sigma$. This $L$ can then be passed as the `scale_tril` of `MultivariateNormalTriL`."
@@ -423,7 +436,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vAnJUJPWShhb"
+        "id": "VLLRfYXzOO30"
       },
       "source": [
         "## Putting it all together"
@@ -432,7 +445,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ow10SA6mShhb"
+        "id": "Vpg-KWrHOO31"
       },
       "source": [
         "You are now ready to put everything that you have learned in this reading together.\n",
@@ -450,7 +463,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SpUJDbP-Shhb"
+        "id": "n7VTgJTgOO31"
       },
       "outputs": [],
       "source": [
@@ -470,7 +483,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ua_YDwPZShhb"
+        "id": "2qjC-bQoOO31"
       },
       "outputs": [],
       "source": [
@@ -483,7 +496,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "kCPcdPAbShhc"
+        "id": "1l6dWvWXOO31"
       },
       "outputs": [],
       "source": [
@@ -495,7 +508,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hw9_PeYTShhc"
+        "id": "FTxC8ZJ3OO32"
       },
       "source": [
         "## Deprecated: `MultivariateNormalFullCovariance`\n",
@@ -509,7 +522,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jGeF1-anShhc"
+        "id": "w4IaYt2-OO32"
       },
       "source": [
         "### Further reading and resources\n",
